--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -454,5 +454,7 @@
   "Sign_in": "Sign in",
   "List_price": "List price",
   "Promotional_price": "Promotional price",
-  "Blog": "News"
+  "Blog": "News",
+  "View_more": "View more",
+  "View_less": "View less"
 }
