--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -468,5 +468,7 @@
   "Sign_in": "Đăng nhập",
   "List_price": "Giá niêm yết",
   "Promotional_price": "Giá khuyến mãi",
-  "Blog": "Tin tức"
+  "Blog": "Tin tức",
+  "View_more": "Xem thêm",
+  "View_less": "Thu gọn"
 }
