update font size, color

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -178,7 +178,7 @@
   "Create_product_type": "Create product type",
   "Name_product_type": "Product type name",
   "Enter_name_product_type": "Enter product type name",
-  "Enter_slug": "Enter slug",
+  "Enter_Slug": "Enter slug",
   "Slug": "Slug",
   "Create_product_success": "Product created successfully",
   "Update_product_success": "Product updated successfully",
@@ -203,7 +203,7 @@
   "Price": "Price",
   "Enter_price": "Enter price",
   "Enter_your_count": "Enter quantity",
-  "Enter_discount": "Enter discount",
+  "Enter_discountPrice": "Enter discount price",
   "Discount(percent)": "Discount (percent)",
   "End_date_discount": "Discount end date",
   "Start_date_discount": "Discount start date",
@@ -342,7 +342,7 @@
   "Others_packages": "Other Service Notes",
   "Pickup_time": "Arrival Date",
   "Spa_Package": "Our Services",
-  "About_urban_spa": "About Urban Spa",
+  "About_urban_spa": "About Urban Oasis Spa",
   "Premium_Spa_And_Relaxation_And_Beauty": "Premium Spa, Relaxation, and Beauty",
   "Enter_your_quantity": "Enter the number of guests",
   "Enter_your_notes": "Enter additional service notes",
@@ -387,9 +387,9 @@
   "Delete_banner_error": "Error Deleting Banner",
   "Contact": "Contact",
   "Support_Ready": "We are always ready to assist!",
-  "Contact_Info": "If you need support or want to contact Urban Spa, please reach out using the information below. Thank you.",
+  "Contact_Info": "If you need support or want to contact Urban Oasis Spa, please reach out using the information below. Thank you.",
   "Our_Location": "Our Location",
-  "Location_Description": "Urban Spa is located on the Old Quarter of Hanoi.",
+  "Location_Description": "Urban Oasis Spa is located on the Old Quarter of Hanoi.",
   "Update_successfully": "Updated successfully",
   "Title_delete_multiple_banner": "Confirm delete multiple banners",
   "Confirm_delete_multiple_banner": "Are you sure you want to delete these banners?",
@@ -456,5 +456,6 @@
   "Promotional_price": "Promotional price",
   "Blog": "News",
   "View_more": "View more",
-  "View_less": "View less"
+  "View_less": "View less",
+  "discountPrice": "Discount Price"
 }
