--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -177,7 +177,7 @@
   "Create_product_type": "Thêm loại sản phẩm",
   "Name_product_type": "Tên loại sản phẩm",
   "Enter_name_product_type": "Nhập tên loại sản phẩm",
-  "Enter_slug": "Nhập slug",
+  "Enter_Slug": "Nhập slug",
   "Slug": "Slug",
   "Create_product_success": "Tạo sản phẩm thành công",
   "Update_product_success": "Cập nhật sản phẩm thành công",
@@ -202,7 +202,7 @@
   "Price": "Giá",
   "Enter_price": "Nhập giá",
   "Enter_your_count": "Nhập số lượng",
-  "Enter_discount": "Nhập giảm giá",
+  "Enter_discountPrice": "Nhập giá giảm",
   "Discount(percent)": "Giảm giá (phần trăm)",
   "End_date_discount": "Ngày kết thúc giảm giá",
   "Start_date_discount": "Ngày bắt đầu giảm giá",
@@ -367,7 +367,7 @@
   "Others_packages": "Ghi chú dịch vụ khác",
   "Pickup_time": "Ngày đến",
   "Spa_Package": "Dịch vụ của chúng tôi",
-  "About_urban_spa": "Về Urban Spa",
+  "About_urban_spa": "Về Urban Oasis Spa",
   "Premium_Spa_And_Relaxation_And_Beauty": "Spa cao cấp, thư giãn và làm đẹp",
   "Enter_your_quantity": "Nhập số lượng khách hàng",
   "Enter_your_notes": "Nhập ghi chú khách hàng",
@@ -437,9 +437,9 @@
   "Delete_banner_error": "Xoá banner lỗi",
   "Contact": "Liên hệ",
   "Support_Ready": "Chúng tôi luôn sẵn sàng hỗ trợ!",
-  "Contact_Info": "Nếu bạn cần hỗ trợ hoặc liên hệ với Urban Spa, vui lòng liên hệ theo thông tin bên dưới. Trân trọng cảm ơn.",
+  "Contact_Info": "Nếu bạn cần hỗ trợ hoặc liên hệ với Urban Oasis Spa, vui lòng liên hệ theo thông tin bên dưới. Trân trọng cảm ơn.",
   "Our_Location": "Vị trí của chúng tôi",
-  "Location_Description": "Urban Spa nằm trên phố cổ Hà Nội.",
+  "Location_Description": "Urban Oasis Spa nằm trên phố cổ Hà Nội.",
   "Update_successfully": "Cập nhật thành công",
   "Title_delete_multiple_banner": "Xác nhận xoá nhiều ảnh",
   "Confirm_delete_multiple_banner": "Bạn có chắc xoá những ảnh này?",
@@ -470,5 +470,6 @@
   "Promotional_price": "Giá khuyến mãi",
   "Blog": "Tin tức",
   "View_more": "Xem thêm",
-  "View_less": "Thu gọn"
+  "View_less": "Thu gọn",
+  "discountPrice": "Giá đã giảm"
 }
